# api/dto/user.go
@@ -1,0 +1,5 @@
+package dto
+
+type SuccessAuthDTO struct {
+	Token string `json:"token"`
+}
