# api/handlers/signIn.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	"context"
 	"fmt"
+	"fudol_api/dto"
 	"fudol_api/helpers"
 	"fudol_api/models"
 	"net/http"
@@ -11,15 +12,10 @@ import (
 	"go.mongodb.org/mongo-driver/bson"
 )
 
-type (
-	UserSigninDTO struct {
-		Login    string `json:"login" validate:"required"`
-		Password string `json:"password" validate:"required"`
-	}
-	UserSigninSuccessDTO struct {
-		Token string `json:"token"`
-	}
-)
+type UserSignInDTO struct {
+	Login    string `json:"login" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
 
 // OpenAPi
 //
@@ -27,13 +23,13 @@ type (
 //	@Summary	sign in
 //	@Accept		json
 //	@Produce	json
-//	@Param		request	body		UserSigninDTO	true	"body request"
-//	@Success	200		{object}	UserSigninSuccessDTO
+//	@Param		request	body		UserSignInDTO	true	"body request"
+//	@Success	200		{object}	dto.SuccessAuthDTO
 //	@Failure	400		{object}	error	"invalid body fields."
 //	@Failure	406		{object}	error	"Invalid credentials."
 //	@Router		/signin [post]
 func (h *Handler) SignIn(c echo.Context) error {
-	var b UserSigninDTO
+	var b UserSignInDTO
 
 	if err := c.Bind(&b); err != nil {
 		fmt.Println(err)
@@ -59,7 +55,7 @@ func (h *Handler) SignIn(c echo.Context) error {
 		return fmt.Errorf("err during creating token %v", err)
 	}
 
-	res := UserSigninSuccessDTO{Token: t}
+	res := dto.SuccessAuthDTO{Token: t}
 
 	return c.JSON(http.StatusOK, res)
 }
